# bagof-magic

./: README.md  pyproject.toml  zensical.toml
docs/api/: fields.md  index.md  options.md
src/bagof/magic/: __init__.py  _resolve.py  constants.py  fields.py  options.py  utils.py
tests/: test_import.py  test_magic.py
