[project]
name = "bagof-magic"
authors = [
    {name = "Yael Balbastre", email = "yael.balbastre@gmail.com"},
]
maintainers = [
    {name = "Yael Balbastre", email = "yael.balbastre@gmail.com"},
]
description = "Dataclass-like structures built on hint-based magic."
readme = "README.md"
license = {text = "MIT"}
keywords = ["bagof", "magic", "struct", "dataclass", "python"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "typing_extensions>=4.13",
    "bagof-core-magic @ git+https://github.com/bagofseeds/bagof-core-magic.git",
    "bagof-validators @ git+https://github.com/bagofseeds/bagof-validators.git",
    "bagof-converters @ git+https://github.com/bagofseeds/bagof-converters.git",
    "bagof-factories @ git+https://github.com/bagofseeds/bagof-factories.git",
]

[project.urls]
Homepage = "https://github.com/bagofseeds/bagof-magic"
Documentation = "https://github.com/bagofseeds/bagof-magic#readme"
Issues = "https://github.com/bagofseeds/bagof-magic/issues"
Repository = "https://github.com/bagofseeds/bagof-magic"

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[build-system]
requires = [
    "setuptools>=59.0",
    "wheel>=0.45.1",
    "versioningit>=1.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bagof*"]
namespaces = true

[tool.versioningit]
default-version = "0+unknown"

[tool.versioningit.vcs]
default-tag = "0.1"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "src/bagof/magic/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["bagof.magic"]
omit = ["*/_version.py"]

[tool.coverage.report]
exclude_also = [
    "if tx.TYPE_CHECKING:",
    "if tx.TYPE_CHECKING or",
]

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
select = ["ANN", "B", "E", "F", "I", "UP", "W"]
ignore = [
    "ANN002",   # Do not type *args
    "ANN003",   # Do not type *kwargs
    "ANN401",   # Allow typing with Any
    # pyupgrade rules whose fixes break Python 3.8 (the supported floor)
    "UP006",    # list[...] annotations need 3.9 at runtime
    "UP007",    # X | Y unions need 3.10
    "UP035",    # deprecated typing import (typing_extensions is intentional)
    "UP045",    # X | None optionals need 3.10
]

[tool.codespell]
check-filenames = true
skip = ".git,*.egg-info,build,dist,*.pdf,*.svg"
